feat: implement UserDbStorage